--- a/pass.html
+++ b/pass.html
@@ -23,8 +23,6 @@
       border: 1px solid #ccc;
       resize: vertical;
     }
-
-    /* Bảng domain scroll & cố định header */
     #domainTable {
       display: block;
       max-height: 320px;
@@ -131,7 +129,7 @@
         <span id="copyMessage">✅ Đã copy!</span>
       </h4>
 
-      <div id="accountList"><!-- danh sách tài khoản sẽ hiện ở đây --></div>
+      <div id="accountList"></div>
     </div>
   </div>
 
@@ -151,7 +149,7 @@
         return { user, pass, domain };
       }
 
-      // Dòng liền: URL: ... Username: ... Password: ...
+      // Dạng URL:... Username:... Password:...
       const blockMatch = line.match(/URL:\s*(.*?)\s*Username:\s*(.*?)\s*Password:\s*(.*)/i);
       if (blockMatch) {
         try {
@@ -166,18 +164,16 @@
       return null;
     }
 
-    // Xử lý block nhiều dòng dạng URL, Username, Password (1 dòng)
+    // Xử lý block nhiều dòng dạng URL, Username, Password
     function processMultiLineAccounts(text) {
       const lines = text.split(/\r?\n/);
       const results = [];
-
       for (let i = 0; i < lines.length; i++) {
         const urlLine = lines[i].trim();
         if (urlLine.toLowerCase().startsWith("url:") && i + 2 < lines.length) {
           const userLine = lines[i + 1].trim();
           const passLine = lines[i + 2].trim();
 
-          // Hỗ trợ Username/User, Password/Pass
           const userPrefix = userLine.match(/^username:/i)
             ? "username:"
             : userLine.match(/^user:/i)
@@ -204,29 +200,26 @@
       return results;
     }
 
-    // Xử lý block nhiều dòng dạng url/login/password không liền dòng, mỗi thông tin trên 1 dòng
+    // Xử lý block dạng url/login/password
     function processUrlLoginPassBlock(text) {
       const lines = text.split(/\r?\n/);
       const results = [];
-
       for (let i = 0; i < lines.length; i++) {
         if (lines[i].toLowerCase().startsWith("url:")) {
           if (i + 2 < lines.length) {
             const urlLine = lines[i].trim();
             const loginLine = lines[i + 1].trim();
             const passLine = lines[i + 2].trim();
-
             const urlMatch = urlLine.match(/^url:\s*(.+)$/i);
             const loginMatch = loginLine.match(/^login:\s*(.+)$/i);
             const passMatch = passLine.match(/^password:\s*(.+)$/i);
-
             if (urlMatch && loginMatch && passMatch) {
               try {
                 const domain = new URL(urlMatch[1].trim()).hostname.toLowerCase();
                 const user = loginMatch[1].trim();
                 const pass = passMatch[1].trim();
                 results.push({ user, pass, domain });
-                i += 2; // nhảy qua 2 dòng đã xử lý
+                i += 2;
               } catch {}
             }
           }
@@ -235,7 +228,32 @@
       return results;
     }
 
-    // Thêm tài khoản vào domainAccounts, tránh trùng
+    // Xử lý block dạng UR1/U53RN4M3/P455W0RD
+    function processUR1Format(text) {
+      const lines = text.split(/\r?\n/);
+      const results = [];
+      for (let i = 0; i < lines.length; i++) {
+        if (lines[i].toLowerCase().startsWith("ur1:")) {
+          const urlLine = lines[i].trim();
+          const userLine = lines[i + 1]?.trim() || "";
+          const passLine = lines[i + 2]?.trim() || "";
+          const urlMatch = urlLine.match(/^ur1:\s*(.+)$/i);
+          const userMatch = userLine.match(/^u53rn4m3:\s*(.+)$/i);
+          const passMatch = passLine.match(/^p455w0rd:\s*(.+)$/i);
+          if (urlMatch && userMatch && passMatch) {
+            try {
+              const domain = new URL(urlMatch[1].trim()).hostname.toLowerCase();
+              const user = userMatch[1].trim();
+              const pass = passMatch[1].trim();
+              results.push({ user, pass, domain });
+              i += 2;
+            } catch {}
+          }
+        }
+      }
+      return results;
+    }
+
     function addAccount({ user, pass, domain }) {
       if (!domain) return;
       if (!domainAccounts.has(domain)) domainAccounts.set(domain, []);
@@ -245,26 +263,16 @@
       }
     }
 
-    // Xử lý toàn bộ text (1 dòng và multi line)
     function processLines(text) {
-      // Dòng đơn lẻ
       for (const line of text.split(/\r?\n/)) {
         const acc = parseAccount(line);
         if (acc) addAccount(acc);
       }
-      // Dạng block nhiều dòng URL, Username, Password (1 dòng)
-      const multi = processMultiLineAccounts(text);
-      for (const acc of multi) {
-        addAccount(acc);
-      }
-      // Dạng block nhiều dòng url/login/password (3 dòng riêng biệt)
-      const urlLoginPassBlock = processUrlLoginPassBlock(text);
-      for (const acc of urlLoginPassBlock) {
-        addAccount(acc);
-      }
+      processMultiLineAccounts(text).forEach(acc => addAccount(acc));
+      processUrlLoginPassBlock(text).forEach(acc => addAccount(acc));
+      processUR1Format(text).forEach(acc => addAccount(acc));
     }
 
-    // Xử lý textarea thủ công
     function processManualInput() {
       const content = document.getElementById("manualInput").value;
       if (!content.trim()) return alert("Bạn chưa nhập dữ liệu.");
@@ -274,7 +282,6 @@
       document.getElementById("accountListBox").style.display = "none";
     }
 
-    // Đọc file txt
     function readTxtFile(file) {
       return new Promise((resolve, reject) => {
         const reader = new FileReader();
@@ -287,7 +294,6 @@
       });
     }
 
-    // Đọc file zip với JSZip, lấy tất cả file .txt bên trong
     async function readZipFile(file) {
       const zip = await JSZip.loadAsync(file);
       const entries = Object.values(zip.files);
@@ -298,22 +304,15 @@
       }
     }
 
-    // Xử lý chọn nhiều file
     document.getElementById("fileInput").addEventListener("change", async function () {
       if (!this.files.length) return;
       domainAccounts.clear();
-
       const files = [...this.files];
       const tasks = files.map(file => {
-        if (file.name.toLowerCase().endsWith(".txt")) {
-          return readTxtFile(file);
-        } else if (file.name.toLowerCase().endsWith(".zip")) {
-          return readZipFile(file);
-        } else {
-          return Promise.resolve();
-        }
+        if (file.name.toLowerCase().endsWith(".txt")) return readTxtFile(file);
+        if (file.name.toLowerCase().endsWith(".zip")) return readZipFile(file);
+        return Promise.resolve();
       });
-
       try {
         await Promise.all(tasks);
         updateDomainTable();
@@ -323,7 +322,6 @@
       }
     });
 
-    // Cập nhật bảng domain
     function updateDomainTable() {
       const tbody = document.querySelector("#domainTable tbody");
       tbody.innerHTML = "";
@@ -333,25 +331,21 @@
         tr.innerHTML = `<td>${domain}</td><td>${accounts.length}</td>`;
         tbody.appendChild(tr);
       }
-      initMultiSelect(document.querySelector("#domainTable tbody"));
+      initMultiSelect(tbody);
     }
 
-    // Kéo chọn nhiều dòng với tối đa 10 dòng
     function initMultiSelect(tbody) {
       let isMouseDown = false;
       let startIndex = null;
       const MAX_SELECT = 10;
-
       function clearSelection() {
         tbody.querySelectorAll("tr.selected").forEach(tr => tr.classList.remove("selected"));
       }
-
       function selectRange(start, end) {
         clearSelection();
         const rows = tbody.children;
         let from = Math.min(start, end);
         let to = Math.max(start, end);
-
         if (to - from + 1 > MAX_SELECT) {
           if (start < end) {
             to = from + MAX_SELECT - 1;
@@ -360,12 +354,10 @@
             if (from < 0) from = 0;
           }
         }
-
         for (let i = from; i <= to && i < rows.length; i++) {
           rows[i].classList.add("selected");
         }
       }
-
       tbody.onmousedown = e => {
         if (e.target.tagName !== "TD") return;
         e.preventDefault();
@@ -375,7 +367,6 @@
         startIndex = Array.from(tbody.children).indexOf(tr);
         selectRange(startIndex, startIndex);
       };
-
       tbody.onmouseover = e => {
         if (!isMouseDown) return;
         if (e.target.tagName !== "TD") return;
@@ -384,15 +375,7 @@
         const currentIndex = Array.from(tbody.children).indexOf(tr);
         selectRange(startIndex, currentIndex);
       };
-
-      document.addEventListener("mouseup", () => {
-        if (isMouseDown) {
-          isMouseDown = false;
-          // Xử lý khi kết thúc kéo chọn (nếu cần)
-        }
-      });
-
-      // Click 1 dòng để hiện tài khoản tương ứng
+      document.addEventListener("mouseup", () => { isMouseDown = false; });
       tbody.querySelectorAll("tr").forEach(tr => {
         tr.onclick = () => {
           const domain = tr.cells[0].textContent;
@@ -401,12 +384,10 @@
       });
     }
 
-    // Hiển thị tài khoản theo domain
     function showAccounts(domain) {
       const container = document.getElementById("accountList");
       container.innerHTML = "";
       const accounts = domainAccounts.get(domain) || [];
-
       accounts.forEach(({ user, pass }) => {
         const item = document.createElement("div");
         item.style.display = "flex";
@@ -414,31 +395,25 @@
         item.style.alignItems = "center";
         item.style.padding = "4px 0";
         item.style.borderBottom = "1px solid #eee";
-
         const textSpan = document.createElement("span");
         textSpan.textContent = `${user}|${pass}`;
-
         const btn = document.createElement("button");
         btn.textContent = "Copy";
         btn.className = "copy-btn";
-        btn.style.flexShrink = "0";
         btn.onclick = e => {
           e.stopPropagation();
           navigator.clipboard.writeText(`${user}|${pass}`).then(() => {
             alert(`✅ Đã copy: ${user}|${pass}`);
           });
         };
-
         item.appendChild(textSpan);
         item.appendChild(btn);
         container.appendChild(item);
       });
-
       document.getElementById("selectedDomain").textContent = domain;
       document.getElementById("accountListBox").style.display = "block";
     }
 
-    // Copy toàn bộ tài khoản domain hiện tại
     function copyAllAccounts() {
       const domain = document.getElementById("selectedDomain").textContent;
       const accounts = domainAccounts.get(domain);
@@ -450,50 +425,37 @@
         setTimeout(() => (msg.style.opacity = 0), 1500);
       });
     }
+
     document.getElementById("copyAllDomainsBtn").addEventListener("click", () => {
-  if (domainAccounts.size === 0) {
-    alert("Chưa có tài khoản nào.");
-    return;
-  }
+      if (domainAccounts.size === 0) {
+        alert("Chưa có tài khoản nào.");
+        return;
+      }
+      const allEntries = new Set();
+      domainAccounts.forEach((accounts, domain) => {
+        for (const acc of accounts) {
+          allEntries.add(`${domain}|${acc.user}|${acc.pass}`);
+        }
+      });
+      if (allEntries.size === 0) {
+        alert("Chưa có tài khoản nào.");
+        return;
+      }
+      const content = [...allEntries].join("\n");
+      navigator.clipboard.writeText(content).then(() => {
+        const msg = document.getElementById("copyAllDomainsMsg");
+        msg.style.opacity = 1;
+        setTimeout(() => { msg.style.opacity = 0; }, 1500);
+      });
+    });
 
-  // Gom toàn bộ tài khoản theo định dạng domain|user|pass, tránh trùng
-  const allEntries = new Set();
-
-  domainAccounts.forEach((accounts, domain) => {
-    for (const acc of accounts) {
-      const entry = `${domain}|${acc.user}|${acc.pass}`;
-      allEntries.add(entry);
+    function filterDomainTable() {
+      const filter = document.getElementById("searchDomainInput").value.toLowerCase();
+      const tbody = document.querySelector("#domainTable tbody");
+      tbody.querySelectorAll("tr").forEach(row => {
+        row.style.display = row.cells[0].textContent.toLowerCase().includes(filter) ? "" : "none";
+      });
     }
-  });
-
-  if (allEntries.size === 0) {
-    alert("Chưa có tài khoản nào.");
-    return;
-  }
-
-  const content = [...allEntries].join("\n");
-  navigator.clipboard.writeText(content).then(() => {
-    const msg = document.getElementById("copyAllDomainsMsg");
-    msg.style.opacity = 1;
-    setTimeout(() => {
-      msg.style.opacity = 0;
-    }, 1500);
-  });
-});
-function filterDomainTable() {
-  const filter = document.getElementById("searchDomainInput").value.toLowerCase();
-  const tbody = document.querySelector("#domainTable tbody");
-  const rows = tbody.querySelectorAll("tr");
-
-  rows.forEach((row) => {
-    const domainCell = row.cells[0].textContent.toLowerCase();
-    if (domainCell.includes(filter)) {
-      row.style.display = "";
-    } else {
-      row.style.display = "none";
-    }
-  });
-}
   </script>
 </body>
 </html>
